test/fail/file-import.mo
import (f : Nat) = "file:../index.html";

